Moving message box js from portoflio to footer. Fixing z-index

--- a/scss/portfolio-partials/_main.scss
+++ b/scss/portfolio-partials/_main.scss
@@ -6,7 +6,7 @@ main {
 
     .message {
         position: relative;
-
+        z-index: 99;
         .message_box {
             position: fixed;
             bottom: 50vh;
